Don't warn about loaded shell extensions and IMEs

This is because shell extensions don't specifically target Chrome, they
just get automatically loaded by the OS. These will get blocked in phase
2 of third-party software blocking.

For IMEs, they are allowed because there is no viable alternative for
their implementation.

This is a reland of
https://chromium-review.googlesource.com/c/chromium/src/+/996586
that got lost when I renamed the class here:
https://chromium-review.googlesource.com/c/chromium/src/+/993699

Tbr: grt@chromium.org
Bug: 829490
Change-Id: I96a9382e0dd745023ea71ddcdbb2f31fac7abfa5
Reviewed-on: https://chromium-review.googlesource.com/1058552
Reviewed-by: Patrick Monette <pmonette@chromium.org>
Commit-Queue: Patrick Monette <pmonette@chromium.org>
Cr-Commit-Position: refs/heads/master@{#558519}
Former-commit-id: cf11ecbf91e542cfe65dc64194efd37e86502671